# ksnose_sim

./: CMakeLists.txt  package.xml
include/nokolat2024_sim/: airplane_eom.hpp
src/: airplane_EoM.cpp  airplane_eom.cpp  airplane_eom_cppOnly.cpp
